Fix T80238: Crash adding properties to material node-trees

The localized node-tree was freeing the materials ID properties twice.

This matches how animation data behaves, setting to NULL after freeing.